# OpenGL-Course

./: .gitignore  README.md
src/OpenGL/: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/OpenGL-MacApp/: CMakeLists.txt  Camera.cpp  Camera.h  CommonValues.h  GLWindow.cpp  GLWindow.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
src/OpenGL-MacApp/Lights/: Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.h
src/OpenGL-MacApp/Resources/Shaders/: shader.frag.glsl  shader.vert.glsl
src/OpenGL-MacApp/Shaders/: shader.frag.glsl  shader.vert.glsl
src/OpenGL/OpenGL-App/: CMakeLists.txt  Camera.cpp  GLWindow.h  Model.cpp  OpenGL-App.cpp  OpenGL-App.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h  main.cpp
src/OpenGL/OpenGL-App/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp
src/OpenGL/OpenGL-App/Resources/Shaders/: directional_shadow_map.vert.glsl  shader.frag.glsl  shader.vert.glsl
src/OpenGLCourse/: OpenGLCourse.sln
src/OpenGLCourse/OpenGLCourseApp/: OpenGLCourseApp.vcxproj  main.cpp
